* allow theme to configure font color of unresolved footnote using unresolved role
* show textual label on admonition if icon image fails to embed (#1741)
* allow theme to disable title page by assigning false to title_page category key (#1754)
* allow Rouge theme to be specified as theme class or instance (API only)
* allow theme to control font size of dot leader in TOC

Bug Fixes::

* do not crash if item in horizontal desciption list has no desc
* do not crash if item in unordered desciption list has no desc and do not append subject stop to term
* log warning rather than crash if front cover image cannot be embedded (such as a broken SVG)
* do not hyphenate a hyphen when hyphenation is enabled (#1562)
* do not insert blank line in index when term is forced to break (#1665)
* use more robust strategy for line height normalization that accounts for line contains only monospaced text (#1650)
* prevent generator from allocating space for placeholder null char (used for anchors) if font is missing glyph (#1672)
* ensure background and admonition icon image files are closed after being read (#1566)
* ensure temporary images generated by running content are cleaned up (#1566)
* fix spacing after first line of indented paragraph (#1557)
* fix crash if btn or kbd macro is used in section title (#1563)
* fix crash when applying text transform to heading cell in table body (#1575)
* do not convert already converted intrinsic width for block and inline SVG
* honor font style when looking for glyph in font
* resolve character references in custom admonition label (as defined via caption attribute)
* convert blocks inside abstract, not just the contents of the blocks
* only suggest installing prawn-gmagick gem if not loaded (#1578)
* applying double border style to thematic break should honor border width
* warn once instead of crashing if cache-uri is set but library is not available
* sanitize values of PDF info values (#1594)